[package]

name = "pink_spider"
version = "1.1.0"
authors = ["kumabook@live.jp"]

#![feature(os)]

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "rss_crawler"
path = "src/rss_crawler.rs"

[[bin]]
name = "update_tracks"
path = "src/update_tracks.rs"

[[bin]]
name = "update_albums"
path = "src/update_albums.rs"

[[bin]]
name = "update_artists"
path = "src/update_artists.rs"

[[bin]]
name = "playlist_crawler"
path = "src/playlist_crawler.rs"

[features]
default = ["postgres"]

[dependencies]
iron             = { git = 'https://github.com/iron/iron', branch = "0.6-maintenance" }
router           = "0.6.0"
mount            = "0.4.0"
hyper            = "*"
regex            = "*"
string_cache     = "0.5.2"
tendril          = "0.3.1"
html5ever        = "0.22.0"
xml5ever         = "0.12.0"
url              = "1.7.0"
lazy_static      = "*"
toml             = "0.2.1"
uuid             = { version = "0.5.0", features = ["v4", "serde"] }
staticfile       = "*"
chrono           = { version = "*", features = ["serde"] }
queryst          = "*"
bodyparser       = "0.8.0"
params           = "*"
serde            = "^1"
serde_json       = "^1"
serde_derive     = "^1"
opengraph        = "0.2.4"
feed-rs          = "0.1.3"
encoding         = "^0.2"
reqwest          = "0.8.5"
[dependencies.postgres]
git = "https://github.com/sfackler/rust-postgres.git"
tag = "postgres-v0.15.2"
features = ["with-uuid", "with-chrono", "with-serde_json", "with-native-tls"]
optional = true
[patch.crates-io]
iron = { git = 'https://github.com/iron/iron', branch = "0.6-maintenance" }